mailnews/news/src/nsNewsFolder.cpp
@@ -440,8 +440,8 @@ NS_IMETHODIMP nsMsgNewsFolder::CreateSubfolder(const nsAString &newsgroupName,
   return rv;
 }
 
-NS_IMETHODIMP nsMsgNewsFolder::Delete() {
-  nsresult rv = nsMsgDBFolder::Delete();
+NS_IMETHODIMP nsMsgNewsFolder::DeleteStorage() {
+  nsresult rv = nsMsgDBFolder::DeleteStorage();
   NS_ENSURE_SUCCESS(rv, rv);
 
   nsCOMPtr<nsINntpIncomingServer> nntpServer;
